<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMovies</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">toWatch</string>
    <string name="title_section2">history</string>
    <string name="add_movie">Add a Movie</string>
    <string name="typeTitle">Type the title :</string>
    <string name="typeNote">Type the note :</string>
    <string name="typeRate">Rate it :</string>
    <string name="title">Title :</string>
    <string name="note">Note : </string>
    <string name="rate">Rate : </string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="titleTextView">Title : </string>
    <string name="dateTextView">Date : </string>
    <string name="noteTextView">Note : </string>
    <string name="rateTextView">Rate : </string>
    <string name="action_add">Add</string>
    <string name="towatch">towatch</string>
    <string name="history">history</string>
    <string name="search_movie">Search a movie</string>
    <string name="search">Search</string>
    
    <string name="hello_world">Hello world!</string>

</resources>
