<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <TextView
        android:id="@+id/add_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_movie"
        android:textSize="20sp" />
     
	<RadioGroup
	android:id="@+id/radiogroup_addmovie"
    android:layout_width="wrap_content"
    android:layout_below="@+id/add_movie"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/radio_towatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/towatch"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_history"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
    
    <LinearLayout
        android:id="@+id/addMovie_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogroup_addmovie"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/typeTitle" />

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <TextView
            android:id="@+id/year_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Type the year of the film : " />

        <EditText
            android:id="@+id/year_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ex: 2013" />
        
        <TextView
            android:id="@+id/note_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Type a note about the film" />

        <EditText
            android:id="@+id/note_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note" />

        <TextView
            android:id="@+id/rate_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/typeRate" />

        <RatingBar
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5"
            android:scaleX="0.8"
            android:scaleY="0.8" />
    </LinearLayout>

    <Button
        android:id="@+id/addMovie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/addMovie_fields"
        android:text="@string/save" />

</RelativeLayout>